# gpt_writer

./: README.md  pyproject.toml  requirements.txt
gpt_writer/: bot.py  db.py  gpt.py  proj.db  prompts.db  utils.py
