[tool.poetry]
name = "gpt-writer"
version = "0.1.0"
description = ""
authors = ["Slmpnv <slmpnv.code.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pytelegrambotapi = "^4.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
